// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot tests  - logged in 1`] = `
<header>
  <div
    className="header-content"
  >
    <div
      className="title-search-cont"
    >
      <Link
        replace={false}
        to="/"
      >
        <div
          className="title"
        >
          <i
            className="fab fa-stack-overflow"
          />
          <span>
            stackoverflow-lite
          </span>
        </div>
      </Link>
      <form
        className="search-form"
      >
        <Link
          replace={false}
          to="/search"
        >
          <i
            className="fas fa-search"
          />
        </Link>
        <input
          id="search-bar"
          name="search"
          placeholder="Search all questions..."
          type="text"
        />
      </form>
    </div>
    <div
      className="user-options-cont"
    >
      <div
        className="user-options"
      >
        <Link
          replace={false}
          to="/profile/Darthrighteous"
        >
          <i
            className="fas fa-user-circle"
          />
        </Link>
        <ButtonPrimary
          colorBtn="#ebf4ff"
          colorTxt="#3275c3"
          label="Log Out"
          link={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</header>
`;

exports[`Header snapshot tests no user - logged out 1`] = `
<header>
  <div
    className="header-content"
  >
    <div
      className="title-search-cont"
    >
      <Link
        replace={false}
        to="/"
      >
        <div
          className="title"
        >
          <i
            className="fab fa-stack-overflow"
          />
          <span>
            stackoverflow-lite
          </span>
        </div>
      </Link>
      <form
        className="search-form"
      >
        <Link
          replace={false}
          to="/search"
        >
          <i
            className="fas fa-search"
          />
        </Link>
        <input
          id="search-bar"
          name="search"
          placeholder="Search all questions..."
          type="text"
        />
      </form>
    </div>
    <div
      className="user-options-cont"
    >
      <div
        className="guest-options"
      >
        <ButtonPrimary
          colorBtn="#ebf4ff"
          colorTxt="#3275c3"
          label="Log In"
          link="/login"
          onClick={null}
        />
        <ButtonPrimary
          colorBtn="#3275c3"
          colorTxt="#fff"
          label="Sign Up"
          link="/signup"
          onClick={null}
        />
      </div>
    </div>
  </div>
</header>
`;

exports[`Header snapshot tests wrong token - logged out 1`] = `
<header>
  <div
    className="header-content"
  >
    <div
      className="title-search-cont"
    >
      <Link
        replace={false}
        to="/"
      >
        <div
          className="title"
        >
          <i
            className="fab fa-stack-overflow"
          />
          <span>
            stackoverflow-lite
          </span>
        </div>
      </Link>
      <form
        className="search-form"
      >
        <Link
          replace={false}
          to="/search"
        >
          <i
            className="fas fa-search"
          />
        </Link>
        <input
          id="search-bar"
          name="search"
          placeholder="Search all questions..."
          type="text"
        />
      </form>
    </div>
    <div
      className="user-options-cont"
    >
      <div
        className="guest-options"
      >
        <ButtonPrimary
          colorBtn="#ebf4ff"
          colorTxt="#3275c3"
          label="Log In"
          link="/login"
          onClick={null}
        />
        <ButtonPrimary
          colorBtn="#3275c3"
          colorTxt="#fff"
          label="Sign Up"
          link="/signup"
          onClick={null}
        />
      </div>
    </div>
  </div>
</header>
`;
